[package]
name = "bme280"
version = "0.1.0"
authors = ["Diego Diaz <diazdiego86@gmail.com>"]
edition = "2018"

[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["stm32f103", "rt"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
#panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
nb = "0.1.2"
#cortex-m-semihosting = "0.3.5"
#bme280 = "0.2.1"
void = { version = "1", default_features = false }
